--- a/package.json
+++ b/package.json
@@ -14,20 +14,27 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.11.0",
+    "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.3.4",
-    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.2.4",
     "@supabase/supabase-js": "^2.47.10",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tiptap/pm": "^2.10.4",
+    "@tiptap/react": "^2.10.4",
+    "@tiptap/starter-kit": "^2.10.4",
     "@types/uuid": "^10.0.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
     "immer": "^10.0.4",
@@ -37,7 +44,7 @@
     "react-hook-form": "^7.51.0",
     "react-router-dom": "^6.28.1",
     "recharts": "^2.12.2",
-    "tailwind-merge": "^2.2.1",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^11.0.3",
     "zod": "^3.22.4",
